# moving-targets

./: .gitignore  README.md  document.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
docs/: build_doc.py  conf.py  index.rst  modules.rst
examples/: balanced_counts.py  fair_classification.py  fair_regression.py
moving_targets/: __init__.py  macs.py
moving_targets/callbacks/: __init__.py  callback.py  console_logger.py  data_logger.py  file_logger.py  history.py  logger.py  wandb_logger.py
moving_targets/learners/: __init__.py  curve_learners.py  learner.py  scikit_learners.py  tensorflow_learners.py  torch_learners.py
moving_targets/masters/: __init__.py  classification_master.py  losses.py  master.py  masters.py  optimizers.py  regression_master.py  single_target_masters.py
moving_targets/metrics/: __init__.py  classification.py  constraints.py  metric.py  regression.py
moving_targets/util/: __init__.py  errors.py  masking.py  probabilities.py  scalers.py  typing.py
res/: communities.csv
test/: abstract.py  signatures.py  test_abstract.py  test_signatures.py
test/dependencies/: external_packages.py
test/examples/: abstract.py  balanced_counts.py  fair_classification.py  fair_regression.py
test/learners/: abstract.py  curve_learners.py  scikit_learners.py  tensorflow_learners.py  test_curve_learners.py  test_learners.py  test_scikit_learners.py  test_tensorflow_learners.py  test_torch_learners.py  torch_learners.py
test/masters/: abstract.py  classification.py  cplex_backend.py  cvxpy_backend.py  gurobi_backend.py  (+8 more)
(+39 files in other folders)
