# test using "pytest"
# build using "hatch build"
# publish using "hatch publish"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = 'moving-targets'
version = '0.3.0'
requires-python = '>=3.8'
dependencies = [
    'matplotlib>=3.5',
    'numpy>=1.24',
    'pandas>=1.4',
    'scikit-learn>=1.1'
]
description = 'Moving Targets: a framework for constrained machine learning'
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = 'Luca Giuliani', email = 'luca.giuliani13@unibo.it' },
    { name = 'University of Bologna - DISI' }
]
maintainers = [
    { name = 'Luca Giuliani', email = 'luca.giuliani13@unibo.it' }
]
license = { file = "LICENSE" }

[project.optional-dependencies]
full = [
    'cvxpy>=1.2',
    'docplex>=2.23',
    'gurobipy>=9.5',
    'torch>=1.12',
    'tensorflow>=2.9',
    'wandb>=0.13'
]

[tool.hatch.build.targets.wheel]
packages = ["moving_targets"]

[project.urls]
Repository = "https://github.com/moving-targets/moving-targets/"
